--- a/form.html
+++ b/form.html
@@ -5,48 +5,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Capstone Project - Form</title>
     
-    <!-- Link to the common global CSS file (index.css) -->
+    <!-- Link to (index.css) -->
     <link rel="stylesheet" href="index.css"> <!-- Or adjust the path if needed -->
     
-    <!-- Link to the form-specific CSS file (form.css) -->
-    <link rel="stylesheet" href="form.css"> <!-- Make sure this is after index.css -->
+    <!-- Link to (form.css) -->
+    <link rel="stylesheet" href="form.css"> <!-- after index.css -->
 </head>
 <body>
 
     <!-- Navigation Bar -->
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="form.html">Form</a>
-        <a href="contact.html">Contact</a>
-    </nav>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="form.html">Form</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <!-- Form Section -->
-    <section id="form">
-        <h1>Submit a Form</h1>
-        <form action="#">
-            <label for="name">Name:</label><br>
-            <input type="text" id="name" name="name" required><br><br>
+    <main>
+        <section id="form">
+            <h1>Submit a Form</h1>
+            <p>We value your input! Please fill out the form below to share your thoughts or inquiries.</p>
+            <form action="#" method="post">
+                <div class="form-group">
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" placeholder="Enter your name" required>
+                </div>
 
-            <label for="email">Email:</label><br>
-            <input type="email" id="email" name="email" required><br><br>
+                <div class="form-group">
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" placeholder="Enter your email" required>
+                </div>
 
-            <label for="message">Message:</label><br>
-            <textarea id="message" name="message" rows="4" required></textarea><br><br>
+                <div class="form-group">
+                    <label for="message">Message:</label>
+                    <textarea id="message" name="message" rows="5" placeholder="Write your message here" required></textarea>
+                </div>
 
-            <input type="submit" value="Submit">
-        </form>
-    </section>
+                <div class="form-actions">
+                    <input type="submit" value="Submit" class="submit-button">
+                </div>
+            </form>
+        </section>
+    </main>
 
     <!-- Footer Section -->
     <footer>
-        <p>© 2024 Our Non-Profit. All rights reserved.</p>
+        <p>&copy; 2024 Our Non-Profit. All rights reserved.</p>
+        <p><a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
     </footer>
-
-</body>
-</html>
-
-   
 
 </body>
 </html>
