--- a/about.html
+++ b/about.html
@@ -3,27 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Capstone project</title>
+    <meta name="description" content="Community Change Action: Building the power of low-income people to create a fair economy and multiracial democracy.">
+    <meta name="keywords" content="Community Change Action, non-profit, social justice, multiracial democracy, fair economy">
+    <title>Community Change Action</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
 
-    <!-- Navigation -->
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="form.html">Form</a>
-        <a href="contact.html">Contact</a>
-    </nav>
+    <!-- Header -->
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="form.html">Take Action</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-   
+    <!-- Main Content -->
+    <main>
+        <!-- Hero Section -->
+        <section id="hero">
+            <h1>Building a Fair Economy for All</h1>
+            <p>Community Change Action empowers low-income communities and people of color to lead in creating a multiracial democracy where everyone thrives.</p>
+            <a href="form.html" class="cta-button">Join the Movement</a>
+        </section>
 
-    <!-- About Section -->
-    <section id="about">
-        <h1>About Us</h1>
-        <p>We are a team blah blah w</p>
-    </section>
+        <!-- About Section -->
+        <section id="about">
+            <h2>About Us</h2>
+            <p>Community Change Action is a national organization dedicated to building the power of low-income individuals, especially people of color, to drive systemic change. Our vision is a society where everyone has access to opportunity, a fair economy, and a multiracial democracy that represents all voices.</p>
+            <ul>
+                <li><strong>Our Mission:</strong> To empower individuals to create change through collective action.</li>
+                <li><strong>Our Values:</strong> Equity, inclusivity, and justice for all.</li>
+                <li><strong>Our Focus Areas:</strong> Economic justice, racial equity, and immigrant rights.</li>
+            </ul>
+        </section>
+    </main>
 
-    
+    <!-- Footer -->
+    <footer>
+        <div class="footer-content">
+            <p>&copy; 2024 Community Change Action. All rights reserved.</p>
+        </div>
+    </footer>
+
 </body>
 </html>
