--- a/about.html
+++ b/about.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Capstone project</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index.css">
+
 </head>
 <body>
 
@@ -27,3 +29,4 @@
     
 </body>
 </html>
+
