--- a/about.html
+++ b/about.html
@@ -17,8 +17,8 @@
         <a href="form.html">Form</a>
         <a href="contact.html">Contact</a>
     </nav>
-
-   
+<!-- Dark Mode Toggle Button -->
+    <button id="darkModeToggle" style="position: fixed; top: 10px; right: 10px; padding: 10px 20px;">Toggle Dark Mode</button>
 
     <!-- About Section -->
     <section id="about">
